vendor asm to sha d7e40e9b5a1f8c957c11754e589ca7219c498e08
the following script vendors asm + GeneratorAdapter.java and its deps
in $CLOJURE/src/main/java under the package clojure.asm

#!/bin/bash

# author Ghadi Shayban <gshayban@gmail.com>
set -e

ASMURI=https://gitlab.ow2.org/asm/asm.git
if [ -z ${1+x} ]
then
  echo error: provide an asm git sha / ref
  echo recent asm tags:
  git ls-remote --refs --tags $ASMURI \
    | cut -f 3 -d / | tac | head -n 10
  exit 1
fi

ASMROOT=asmvendor
CLJASM=src/jvm/clojure/asm

echo shallow clone
git clone --quiet --no-checkout --depth 30 $ASMURI $ASMROOT
pushd $ASMROOT > /dev/null
GITREF=$(git rev-parse $1)
git checkout --quiet $GITREF
popd > /dev/null

echo removing existing clojure.asm
git rm -r --ignore-unmatch $CLJASM > /dev/null
mkdir -p $CLJASM $CLJASM/commons

echo copying vendored files
cp $ASMROOT/asm/src/main/java/org/objectweb/asm/*.java $CLJASM

for cls in InstructionAdapter GeneratorAdapter Method LocalVariablesSorter TableSwitchGenerator;
do
cp \
   $ASMROOT/asm-commons/src/main/java/org/objectweb/asm/commons/${cls}.java \
   $CLJASM/commons
done

echo rewriting package names
find $CLJASM -name '*.java' -print0 | xargs -0 sed -iBAK 's/org.objectweb.asm/clojure.asm/g'
find $CLJASM -name '*BAK' -delete

echo git commit
git add $CLJASM

cat - "${BASH_SOURCE[0]}" > COMMIT_MSG <<EOM
vendor asm to sha $GITREF

the following script vendors asm + GeneratorAdapter.java and its deps
in \$CLOJURE/src/main/java under the package clojure.asm

EOM

git commit \
    -F COMMIT_MSG \
    --author='Ghadi Shayban <gshayban@gmail.com>' \
    > /dev/null \
  && rm COMMIT_MSG
rm -rf $ASMROOT